update thanh_tich tables

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
+  "tailwindCSS.experimental.classRegex": [
+    ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+  ],
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
