--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^7.6.2"
+    "mongoose": "^7.6.3",
+    "mongoose-bignumber": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
