--- a/client/package.json
+++ b/client/package.json
@@ -15,15 +15,20 @@
     "@mui/material": "^5.14.13",
     "@redux-saga/core": "^1.2.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.4.3",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.0.5",
+    "@types/js-cookie": "^3.0.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
