--- a/serverB/package.json
+++ b/serverB/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
     "@types/node-cron": "^3.0.10",
+    "@types/validator": "^13.11.5",
     "concurrently": "^8.2.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
@@ -23,11 +26,14 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "validator": "^13.11.0"
   }
 }
